--- a/podweb/app/build.gradle
+++ b/podweb/app/build.gradle
@@ -30,6 +30,11 @@ dependencies {
 	implementation("io.javalin:javalin:5.6.3")
 
 	testImplementation("io.javalin:javalin-bundle:5.6.3")
+
+	implementation("io.javalin:javalin-rendering:5.6.3")
+	implementation("gg.jte:jte:3.1.6")
+
+	implementation("org.slf4j:slf4j-simple:2.0.7")
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
