--- a/podweb/app/build.gradle
+++ b/podweb/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 
 	//Javalin proposed logger (in console)
 	implementation("org.slf4j:slf4j-simple:2.0.7")
+
+	//Database driver
+	implementation 'org.postgresql:postgresql:42.7.1'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -77,7 +80,7 @@ tasks.register('uberJar', Jar) {
 
 // Just a way to make tailwind CLI to be downloaded and run at server start (to avoid running the tailwind-watch.sh)
 tasks.run {
-	dependsOn(tasks.tailwindDownload, tasks.tailwindCompile)
+	// dependsOn(tasks.tailwindDownload, tasks.tailwindCompile)
 }
 
 tasks.uberJar {
