Change test output verbosity

--- a/podweb/app/build.gradle
+++ b/podweb/app/build.gradle
@@ -114,3 +114,12 @@ test {
 		exceptionFormat "full"
 	}
 }
+
+// Clear the output before tests run
+// Very useful in gradle test --continuous 
+// From https://discuss.gradle.org/t/possibility-to-clear-screen-before-continous-build-output/24488/3
+gradle.addListener new BuildAdapter() {
+    void projectsEvaluated(Gradle gradle) {
+        exec { commandLine 'clear' }
+    }
+}
