--- a/podweb/app/build.gradle
+++ b/podweb/app/build.gradle
@@ -112,11 +112,11 @@ test {
 // Very useful in gradle test --continuous 
 // From https://discuss.gradle.org/t/possibility-to-clear-screen-before-continous-build-output/24488/3
 // This will fail on Windows, change "clear" to "cls" !
-gradle.addListener new BuildAdapter() {
-    void projectsEvaluated(Gradle gradle) {
-        exec { commandLine 'clear' }
-    }
-}
+// gradle.addListener new BuildAdapter() {
+//     void projectsEvaluated(Gradle gradle) {
+//         exec { commandLine 'clear' }
+//     }
+// }
 
 
 // Load environement variable from a .env file (useful for run and test)
